prodMetadata/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_ID_18_digits__c</fullName>
        <description>Account ID in 18-digit format</description>
        <formula>CASESAFEID( Id )</formula>
        <inlineHelpText>Account ID in 18-digit format</inlineHelpText>
        <label>Account ID (18 digits)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bad_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the address listed is no good, select here so we don&apos;t lose the fact that this address is no good and keep repopulating bad info.</description>
        <inlineHelpText>If the address listed is no good, select here so we don&apos;t lose the fact that this address is no good and keep repopulating bad info.</inlineHelpText>
        <label>Bad Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Account_Number__c</fullName>
        <label>C&amp;P Account Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Company_ID__c</fullName>
        <externalId>true</externalId>
        <label>C&amp;P Company ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conservative_Media__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conservative Media</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_cleanup_note__c</fullName>
        <description>To be used to mark records when they need to be specifically included or excluded in a DemandTools operation or other mass record update process. It will only be seen by administrators, and house temporarily useful information that is free to be overwritten when needed.</description>
        <label>Data Cleanup Note</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Year_Max__c</fullName>
        <inlineHelpText>The maximum amount ever donated in one calendar year.</inlineHelpText>
        <label>Donation Year Max</label>
        <summarizedField>Donation_History__c.Amount_Posted__c</summarizedField>
        <summaryForeignKey>Donation_History__c.Account__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Donor_Level__c</fullName>
        <formula>IF(Donation_Year_Max__c &lt; 100 &amp;&amp; Donation_Year_Max__c &gt; 0, &quot;Low&quot;,IF(Donation_Year_Max__c &gt;= 100 &amp;&amp; Donation_Year_Max__c &lt; 500, &quot;Medium&quot;, IF(Donation_Year_Max__c &gt;= 500 &amp;&amp; Donation_Year_Max__c &lt; 5000, &quot;High&quot;, IF(Donation_Year_Max__c &gt;= 5000,&quot;Top&quot;,&quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Low = Less than $100 in a given year
Medium = $100 - $499 in a given year
High = $500 - $4,999 in a given year
Top = $5,000+ in a given year</inlineHelpText>
        <label>Donor Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geo Location</label>
        <referenceTo>Geo_Location__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geocode_Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this checkbox to exclude the account from the Geo Force Geocode process</description>
        <inlineHelpText>Check this box to exclude from geocoding process</inlineHelpText>
        <label>Geocode Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAVA_Board_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set by an Apex trigger on the Contact object. It should only be checked if the Account is for an Individual type Account/Contact not for an organization record.</description>
        <inlineHelpText>This field is set by an Apex trigger on the Contact object. It should only be checked if the Account is for an Individual type Account/Contact not for an organization record.</inlineHelpText>
        <label>IAVA Board Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integrates_with_Salesforce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integrates with Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lapsed_Funder__c</fullName>
        <description>If the Organization is a funder, but has not donated this year or last</description>
        <formula>AND(
    YEAR(TODAY()) &gt;(YEAR( npo02__LastCloseDate__c )+1),  
    npe01__LifetimeDonationHistory_Amount__c &gt; 100
    )</formula>
        <label>Lapsed Funder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link_to_Contact_Page__c</fullName>
        <description>The url for how to get in touch with staff</description>
        <inlineHelpText>The url for how to get in touch with staff</inlineHelpText>
        <label>Link to Contact Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MA_Clean_City__c</fullName>
        <label>Clean City (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_Country__c</fullName>
        <label>Clean Country (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_County__c</fullName>
        <label>Clean County (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_District__c</fullName>
        <label>Clean District (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_Postal_Code__c</fullName>
        <label>Clean Postal Code (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_State__c</fullName>
        <label>Clean State (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_Street__c</fullName>
        <label>Clean Street (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Latitude__c</fullName>
        <label>Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MA_Longitude__c</fullName>
        <label>Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MA_Quality__c</fullName>
        <label>Quality (MapAnything)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MA_Similarity_Level__c</fullName>
        <label>Similarity Level (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_D_Hist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be populated by Demand tools when there are multiple D hist records per year per org record. DELETE after use!</description>
        <label>Multiple D Hist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Num_Initial_Recurrings__c</fullName>
        <description>Used to confirm all recurring donation series have correctly marked initial recurrance</description>
        <inlineHelpText>Used to confirm all recurring donation series have correctly marked initial recurrance</inlineHelpText>
        <label>Num. Initial Recurrings</label>
        <summaryFilterItems>
            <field>Opportunity.Starts_a_Recurring_Series__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Recurring_Donations__c</fullName>
        <label>Num. Recurring Donations</label>
        <summaryFilterItems>
            <field>Opportunity.From_Recurring_Series__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Office_Primary_Contact_Mismatch__c</fullName>
        <formula>NOT(CONTAINS(Name, Primary_KW_Contact__r.FirstName)) &amp;&amp; NOT(CONTAINS(Name, Primary_KW_Contact__r.LastName))</formula>
        <label>Office-Primary Contact Mismatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org_Name__c</fullName>
        <defaultValue>$Organization.Name</defaultValue>
        <description>Same as Account Name</description>
        <externalId>true</externalId>
        <inlineHelpText>Same as Account Name</inlineHelpText>
        <label>Org Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizational_Ally__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Organizational Ally</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POC_Email__c</fullName>
        <formula>IF(npe01__One2OneContact__r.Email != &quot;&quot;, npe01__One2OneContact__r.Email , POC__r.Email)</formula>
        <label>POC Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Point of Contact</description>
        <inlineHelpText>Primary Point of Contact</inlineHelpText>
        <label>POC</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (POC)</relationshipLabel>
        <relationshipName>AccountPOC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Org_ID_18_digits__c</fullName>
        <formula>CASESAFEID( ParentId )</formula>
        <label>Parent Org ID (18 digits)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerOfOne__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PowerOfOne</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Press_Outlet_Type__c</fullName>
        <label>Press Outlet Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Newspaper</fullName>
                </value>
                <value>
                    <fullName>Magazine</fullName>
                </value>
                <value>
                    <fullName>Television Network</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Newspaper/Website</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Blog</fullName>
                </value>
                <value>
                    <fullName>Wire Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Press_Outlet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Press Outlet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_IAVA_POC__c</fullName>
        <formula>POC__r.Primary_IAVA_POC__r.FirstName &amp; &apos; &apos; &amp; POC__r.Primary_IAVA_POC__r.LastName</formula>
        <label>Primary IAVA POC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_KW_Contact_Name__c</fullName>
        <formula>Primary_KW_Contact__r.FirstName &amp; &quot; &quot; &amp; Primary_KW_Contact__r.LastName</formula>
        <label>Primary KW Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_KW_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is currently populated manually and will fall out of date - update if you want to keep it up to date!</description>
        <inlineHelpText>This is currently populated manually and will fall out of date - update if you want to keep it up to date!</inlineHelpText>
        <label>Primary KW Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>KW - Member Record</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Primary KW Contact)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prospecting_Status__c</fullName>
        <label>Prospecting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lapsed Donor</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>New Relationship</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email from IAVA</fullName>
                </value>
                <value>
                    <fullName>Television (News)</fullName>
                </value>
                <value>
                    <fullName>Television (Ad)</fullName>
                </value>
                <value>
                    <fullName>Magazine or Newspaper (Article)</fullName>
                </value>
                <value>
                    <fullName>Magazine or Newspaper (Ad)</fullName>
                </value>
                <value>
                    <fullName>Internet Search</fullName>
                </value>
                <value>
                    <fullName>Internet News</fullName>
                </value>
                <value>
                    <fullName>Wire Service</fullName>
                </value>
                <value>
                    <fullName>Blog</fullName>
                </value>
                <value>
                    <fullName>Word of Mouth</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TMC_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Military Coalition member</description>
        <inlineHelpText>The Military Coalition member</inlineHelpText>
        <label>TMC Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Gifts_2011__c</fullName>
        <label>Total Gifts 2011</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>2011</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Grant Received, Posted</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Gifts_2012__c</fullName>
        <label>Total Gifts 2012</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>2012</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Grant Received, Posted</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Gifts_2013__c</fullName>
        <label>Total Gifts 2013</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>2013</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Grant Received, Posted</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Used_By__c</fullName>
        <label>Used By</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commo</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Executive Office</fullName>
                </value>
                <value>
                    <fullName>Field</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Legislative</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>People</fullName>
                </value>
                <value>
                    <fullName>Policy</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>RRRP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VIP equivalent for organizations</description>
        <inlineHelpText>VIP equivalent for organizations</inlineHelpText>
        <label>VIO (Very Important Org)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WE_FW8_NP__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WE_FW8_NP__CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WE_FW8_NP__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WE_FW8_NP__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WE_FW8_NP__SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WE_FW8_NP__SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WE_FW8_NP__UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kw__Bills_URL__c</fullName>
        <label>Bills URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>kw__Bills__c</fullName>
        <formula>HYPERLINK(  kw__Bills_URL__c&amp;&quot;&amp;theme=&quot;&amp;TEXT($Organization.UiSkin)  , IMAGE(&quot;/servlet/servlet.FileDownload?file=015A00000004lv6&quot;, &quot;Bills&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bills and Legislation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Briefing_URL__c</fullName>
        <label>Briefing URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>kw__Briefing__c</fullName>
        <formula>HYPERLINK(  kw__Briefing_URL__c&amp;&quot;&amp;theme=&quot;&amp;TEXT($Organization.UiSkin)  , IMAGE(&quot;/servlet/servlet.FileDownload?file=015A00000004lv7&quot;, &quot;Briefing&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Briefing Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Building__c</fullName>
        <label>Building</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Candidates_URL__c</fullName>
        <label>Candidates URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>kw__Candidates__c</fullName>
        <formula>HYPERLINK(  kw__Candidates_URL__c&amp;&quot;&amp;theme=&quot;&amp;TEXT($Organization.UiSkin)  , IMAGE(&quot;/servlet/servlet.FileDownload?file=015A0000001hcdI&quot;, &quot;Candidates&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidates and Elects</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Caucus_Description__c</fullName>
        <label>Caucus Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kw__Caucus_Membership_Joint__c</fullName>
        <label>Joint Caucus Memberships</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KnowWho</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kw__Caucus_Membership__c</fullName>
        <label>Caucus Memberships</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KnowWho</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kw__Chamber__c</fullName>
        <label>Chamber</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US Senate</fullName>
                </value>
                <value>
                    <fullName>US House</fullName>
                </value>
                <value>
                    <fullName>US Joint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kw__City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Committee_Jurisdiction__c</fullName>
        <label>Committee Jurisdiction</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kw__Committee_Membership__c</fullName>
        <label>Committee Assignments</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KnowWho</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kw__CountyOfCoverage__c</fullName>
        <label>Counties</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__District_Description__c</fullName>
        <label>District Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__District__c</fullName>
        <label>District Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Elected__c</fullName>
        <label>Elected</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Facebook__c</fullName>
        <label>Facebook Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>kw__Finance_URL__c</fullName>
        <label>Finance URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>kw__Finance__c</fullName>
        <formula>HYPERLINK(  kw__Finance_URL__c&amp;&quot;&amp;theme=&quot;&amp;TEXT($Organization.UiSkin)  , IMAGE(&quot;/servlet/servlet.FileDownload?file=015A0000001hcdS&quot;, &quot;Finance&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Finances</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__KW_Address__c</fullName>
        <label>KnowWho Address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fed Capitol Office</fullName>
                </value>
                <value>
                    <fullName>Fed Caucus Office</fullName>
                </value>
                <value>
                    <fullName>Fed Committee Office</fullName>
                </value>
                <value>
                    <fullName>Fed District Office</fullName>
                </value>
                <value>
                    <fullName>Fed Leadership Office</fullName>
                </value>
                <value>
                    <fullName>Fed Officer Office</fullName>
                </value>
                <value>
                    <fullName>Fed Subcommittee Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kw__KW_Category__c</fullName>
        <label>KnowWho Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fed Caucus</fullName>
                </value>
                <value>
                    <fullName>Fed Committee</fullName>
                </value>
                <value>
                    <fullName>Fed Leadership</fullName>
                </value>
                <value>
                    <fullName>Fed Legislator Office</fullName>
                </value>
                <value>
                    <fullName>Fed Officer</fullName>
                </value>
                <value>
                    <fullName>Former Fed Caucus</fullName>
                </value>
                <value>
                    <fullName>Former Fed Committee</fullName>
                </value>
                <value>
                    <fullName>Former Fed Leadership</fullName>
                </value>
                <value>
                    <fullName>Former Fed Legislator</fullName>
                </value>
                <value>
                    <fullName>Former Fed Officer</fullName>
                </value>
                <value>
                    <fullName>Former Fed Staffer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kw__KW_Directory__c</fullName>
        <label>KnowWho Directory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CongressForce</fullName>
                </value>
                <value>
                    <fullName>FedExecForce</fullName>
                </value>
                <value>
                    <fullName>GovAffairsForce</fullName>
                </value>
                <value>
                    <fullName>LocalForce</fullName>
                </value>
                <value>
                    <fullName>MediaForce</fullName>
                </value>
                <value>
                    <fullName>StateForce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kw__KW_Edit_Link_Formula__c</fullName>
        <formula>kw__KW_Edit_Link__c&amp;&quot;&amp;theme=&quot;&amp;TEXT($Organization.UiSkin)</formula>
        <label>KW Edit Link Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__KW_Edit_Link__c</fullName>
        <label>KW Edit Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__KW_Template__c</fullName>
        <label>KnowWho Template</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AccountCaucus</fullName>
                </value>
                <value>
                    <fullName>AccountCaucusFormer</fullName>
                </value>
                <value>
                    <fullName>AccountCommittee</fullName>
                </value>
                <value>
                    <fullName>AccountCommitteeFormer</fullName>
                </value>
                <value>
                    <fullName>AccountFormer</fullName>
                </value>
                <value>
                    <fullName>AccountMember</fullName>
                </value>
                <value>
                    <fullName>AccountMemberFormer</fullName>
                </value>
                <value>
                    <fullName>AccountOfficer</fullName>
                </value>
                <value>
                    <fullName>AccountOfficerFormer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kw__KW_Updated__c</fullName>
        <label>KnowWho Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kw__KnowWhoId__c</fullName>
        <externalId>true</externalId>
        <label>KnowWho Record ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Leadership_Positions__c</fullName>
        <label>Leadership Positions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KnowWho</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kw__Leadership_and_Officer_Description__c</fullName>
        <label>Leadership and Officer Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kw__Links_to_Maps__c</fullName>
        <formula>HYPERLINK(  kw__Map_URL__c&amp;&quot;&amp;theme=&quot;&amp;TEXT($Organization.UiSkin) , IMAGE(&quot;/servlet/servlet.FileDownload?file=015A00000004lhg&quot;, &quot;Maps&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interactive Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Mailing_Address_1__c</fullName>
        <label>Mailing Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kw__Mailing_Address_2__c</fullName>
        <label>Mailing Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>